# stock_market_sim

./: .env  Cargo.toml  docker-compose.yaml  makefile  stock-market-trading-simulator-EngineeringDesign.md  stock-market-trading-simulator-PRD.md
config/: base.toml  local.toml
migrations/: 20250310001318_setup.sql  20250310001403_create_users_table.sql  20250310002234_create_stocks_table.sql  20250311112546_create_stock_prices_table.sql
scripts/: local_setup.sh
src/: lib.rs  logging.rs  price_generation.rs  settings.rs  util.rs
src/http/: error.rs  mod.rs  state.rs
src/http/stocks/: db.rs  mod.rs  routes.rs
src/sessions/: error.rs  middleware.rs  mod.rs  session.rs  store.rs
tests/: health_check.rs
