[package]
name = "stock-market-sim"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
axum = { version = "0.8.1", features = ["macros"] }
config = "0.15.9"
cookie = { version = "0.18.1", features = ["percent-encode"] }
deadpool-redis = { version = "0.20.0", features = ["rt_tokio_1"] }
rand = "0.9.0"
rust_decimal = "1.37.0"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "uuid", "time", "rust_decimal"] }
thiserror = "2.0.12"
time = { version = "0.3.39", features = ["serde"] }
tokio = { version = "1.44.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace", "util", "request-id"] }
tower-sessions = "0.14.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.15.1", features = ["serde", "v4"] }

[dev-dependencies]
reqwest = { version = "0.12.14", features = ["json"] }
